--- a/less/custom.less
+++ b/less/custom.less
@@ -54,7 +54,7 @@
 }
 
 .jumbotron-about-bg{
-	background-image: url('../images/about-bg.jpeg') ;
+	background-image: url('../images/about-bg.jpg') ;
 	max-width: 100%;
 	heigh:		auto;
 }
@@ -107,7 +107,7 @@ html, body{
 
 .last-section{
 	overflow:		auto;
-	padding-bottom: 70px;
+	padding-bottom: 135px;
 
 }
 
@@ -128,13 +128,14 @@ html, body{
 }
 
 .form-anchor{
-	margin-top: -100px;
+	margin-top: 	-100px;
 }
 
 //Team Page
 //==========================================================
 .team-member{
-	text-align: center;
+	text-align: 	center;
+/* 	margin-bottom: 	45px; */
 	p{
 		text-align: justify;
 	}
